--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>xyz.voidmoment.skyblockd</groupId>
+    <groupId>space.maxus.skyblockd</groupId>
     <artifactId>SkyblockD</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -16,7 +16,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>https://voidmoment.xyz</url>
+    <url>https://maxus.space</url>
 
     <build>
         <plugins>
