--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>space.maxus.skyblockd</groupId>
     <artifactId>skyblocked-1.16.5</artifactId>
-    <version>0.5</version>
+    <version>1.0-RELEASE</version>
     <packaging>jar</packaging>
 
     <name>SkyblockD</name>
